[tool.poetry]
name = "esridumpgdf"
version = "0.1.0"
description = ""
authors = ["wchatx <wchatx@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
esridump = "^1.10.1"
geopandas = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
